--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,6 +46,10 @@ body {
   scroll-behavior: smooth;
 }
 
+body{
+  overflow-x: hidden;
+}
+
 a {
   color: inherit;
   text-decoration: none;
